# neurocord

./: .gitignore  README.md  main.py  pyproject.toml
cogs/: ask.py  help.py  semantic_search.py  test_commands.py  watch_together.py
terraform/: main.tf  variables.tf
tests/: test_ask.py  test_semantic_search.py  test_watch_together.py
utils/: config.py  database.py  embeddings.py  logging_config.py  models.py
