[project]
name = "discord-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic>=2.7.0",
    "aiohttp>=3.12.14",
    "colorama>=0.4.6",
    "nextcord>=3.1.0",
    "openai>=1.97.0",
    "python-dotenv>=1.1.1",
    "supabase>=2.17.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.4",
]
